--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <ImageView
-        android:id="@+id/qr_img"
+        android:id="@+id/introImg"
         android:layout_width="200dp"
         android:layout_height="200dp"
 
