--- a/app/src/main/res/layout/activity_qrdetail.xml
+++ b/app/src/main/res/layout/activity_qrdetail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -8,34 +8,65 @@
     tools:context=".QRDetailActivity">
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="280dp"
+        android:id="@+id/qrImg"
+        android:layout_width="match_parent"
         android:layout_height="280dp"
-        android:layout_marginTop="60dp"
-        android:contentDescription="@string/your_qr_code"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:layout_marginStart="55dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="55dp"
+        android:contentDescription="@string/your_qr_code" />
+
     <TextView
-        android:id="@+id/idQrIntro"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="340dp"
+        android:id="@+id/qrIntro"
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginEnd="55dp"
+        android:layout_marginTop="380dp"
+        android:textSize="20sp"
+        android:textStyle="italic"
         android:text="@string/your_qr_code"
-        android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:gravity="center" />
+
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="300dp"
-        android:layout_height="260dp"
-        android:layout_marginBottom="68dp"
-        android:hint="@string/your_qr_content"
+        android:id="@+id/qrContent"
+        android:layout_height="120dp"
+        android:layout_width="match_parent"
         android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:hint="@string/your_qr_content"
+        android:layout_marginTop="410dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"/>
+
+    <ImageButton
+        android:id="@+id/homeBtn"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+    <Button
+        android:id="@+id/interactBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="550dp"
+        android:layout_marginStart="55dp"
+        android:text="@string/interact_button" />
+
+    <Button
+        android:id="@+id/saveBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="540dp"
+        android:layout_marginStart="200dp"
+        android:text="@string/save_button" />
+
+    <Button
+        android:id="@+id/shareBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="600dp"
+        android:layout_marginStart="200dp"
+        android:text="@string/share_button" />
+</RelativeLayout>
