--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
         android:layout_height="70dp"
         android:layout_marginEnd="104dp"
         android:layout_marginBottom="200dp"
-        android:text="@string/gen_qr"
+        android:text="@string/gen_custom_qr"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
