--- a/app/src/main/res/layout/activity_qrdetail.xml
+++ b/app/src/main/res/layout/activity_qrdetail.xml
@@ -44,6 +44,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:layout_marginStart="20dp"
+        android:contentDescription="@string/home_button"
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
     <Button
