--- a/app/src/main/res/layout/activity_qrdetail.xml
+++ b/app/src/main/res/layout/activity_qrdetail.xml
@@ -39,7 +39,7 @@
         android:layout_marginEnd="50dp"/>
 
     <ImageButton
-        android:id="@+id/genHomeBtn"
+        android:id="@+id/detailHomeBtn"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
