--- a/app/src/main/res/layout/activity_scan_qr.xml
+++ b/app/src/main/res/layout/activity_scan_qr.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="100dp"/>
 
     <ImageButton
-        android:id="@+id/detailHomeBtn"
+        android:id="@+id/scanHomeBtn"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
