--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -9,68 +10,54 @@
 
     <TextView
         android:id="@+id/info_txt_id"
-        android:layout_width="231dp"
-        android:layout_height="58dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginBottom="392dp"
-        android:clickable="true"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_marginTop="305dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginEnd="70dp"
         android:gravity="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:text="@string/app_name"
+        android:textStyle="bold"
+        android:textSize="30sp" />
 
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:id="@+id/qr_scan_btn_id"
-        android:layout_width="180dp"
-        android:layout_height="70dp"
-        android:layout_marginEnd="104dp"
-        android:layout_marginBottom="300dp"
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginTop="380dp"
         android:text="@string/scan_qr"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:textSize="25sp"/>
 
-    <com.google.android.material.button.MaterialButton
-         android:id="@+id/qr_gen_btn_id"
-        android:layout_width="180dp"
-        android:layout_height="70dp"
-        android:layout_marginEnd="104dp"
-        android:layout_marginBottom="200dp"
+    <Button
+        android:id="@+id/qr_gen_btn_id"
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginTop="470dp"
         android:text="@string/gen_custom_qr"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:textSize="25sp"/>
 
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:id="@+id/img_choose_btn_id"
-        android:layout_width="180dp"
-        android:layout_height="70dp"
-        android:layout_marginEnd="104dp"
-        android:layout_marginBottom="52dp"
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginTop="560dp"
         android:text="@string/choose_img_qr"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:textSize="25sp"/>
 
     <ImageView
         android:id="@+id/introImg"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="96dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="70dp"
+        android:layout_marginStart="90dp"
+        android:layout_marginEnd="90dp"
+        android:layout_marginBottom="430dp"
         tools:src="@tools:sample/avatars" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="160dp"
-        android:layout_marginBottom="152dp"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
