--- a/app/src/main/res/layout/activity_qrdetail.xml
+++ b/app/src/main/res/layout/activity_qrdetail.xml
@@ -49,25 +49,31 @@
 
     <Button
         android:id="@+id/interactBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
         android:layout_marginTop="550dp"
         android:layout_marginStart="55dp"
+        android:layout_marginEnd="220dp"
+        android:textSize="25sp"
         android:text="@string/interact_button" />
 
     <Button
         android:id="@+id/saveBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
         android:layout_marginTop="540dp"
-        android:layout_marginStart="200dp"
+        android:layout_marginStart="210dp"
+        android:layout_marginEnd="55dp"
+        android:textSize="25sp"
         android:text="@string/save_button" />
 
     <Button
         android:id="@+id/shareBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="600dp"
-        android:layout_marginStart="200dp"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_marginTop="620dp"
+        android:layout_marginStart="210dp"
+        android:layout_marginEnd="55dp"
+        android:textSize="25sp"
         android:text="@string/share_button" />
 </RelativeLayout>
