--- a/app/src/main/res/drawable/custom_text_box.xml
+++ b/app/src/main/res/drawable/custom_text_box.xml
@@ -3,7 +3,7 @@
     <solid android:color="#FFFFFF"/> <!-- Background color of the box -->
     <stroke
         android:width="10dp"
-        android:color="#006400"
+        android:color="@color/dark_green"
     /> <!-- Dark green border -->
     <corners android:radius="15dp"/> <!-- Optional: rounded corners -->
 </shape>
