--- a/app/src/main/res/layout/activity_qrgen.xml
+++ b/app/src/main/res/layout/activity_qrgen.xml
@@ -15,12 +15,13 @@
 
     <ImageButton
         android:id="@+id/genHomeBtn"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginTop="20dp"
         android:layout_marginStart="20dp"
+        android:background="@drawable/green_custom_text_box"
         android:contentDescription="@string/home_button"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+        tools:srcCompat="@drawable/baseline_home_24" />
 
     <TextView
         android:id="@+id/textView2"
