--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,11 +12,12 @@
         android:id="@+id/info_txt_id"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:layout_marginTop="305dp"
+        android:layout_marginTop="380dp"
         android:layout_marginStart="70dp"
         android:layout_marginEnd="70dp"
         android:gravity="center"
-        android:text="@string/app_name"
+        android:text="@string/app_intro"
+        android:textColor="@color/dark_green"
         android:textStyle="bold"
         android:textSize="30sp" />
 
@@ -24,40 +25,44 @@
         android:id="@+id/qr_scan_btn_id"
         android:layout_width="match_parent"
         android:layout_height="90dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginEnd="60dp"
-        android:layout_marginTop="380dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginTop="480dp"
         android:text="@string/scan_qr"
-        android:textSize="25sp"/>
-
+        android:textSize="30sp"
+        android:textColor="@color/dark_green"
+        android:background="@drawable/custom_text_box"/>
     <Button
         android:id="@+id/qr_gen_btn_id"
         android:layout_width="match_parent"
         android:layout_height="90dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginEnd="60dp"
-        android:layout_marginTop="470dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginTop="580dp"
         android:text="@string/gen_custom_qr"
-        android:textSize="25sp"/>
+        android:textSize="25sp"
+        android:textColor="@color/dark_green"
+        android:background="@drawable/custom_text_box"/>/>
 
     <Button
         android:id="@+id/img_choose_btn_id"
         android:layout_width="match_parent"
         android:layout_height="90dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginEnd="60dp"
-        android:layout_marginTop="560dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginTop="680dp"
         android:text="@string/choose_img_qr"
-        android:textSize="25sp"/>
+        android:textSize="25sp"
+        android:textColor="@color/dark_green"
+        android:background="@drawable/custom_text_box"/>
 
     <ImageView
         android:id="@+id/introImg"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="70dp"
-        android:layout_marginStart="90dp"
-        android:layout_marginEnd="90dp"
-        android:layout_marginBottom="430dp"
-        tools:src="@tools:sample/avatars" />
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginTop="100dp"
+        android:layout_centerHorizontal="true"
+        android:contentDescription="TODO"
+        android:background="@mipmap/custom_launcher_foreground"/>
 
 </RelativeLayout>
