--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:id="@+id/info_txt_id"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:layout_marginTop="380dp"
+        android:layout_marginTop="400dp"
         android:layout_marginStart="70dp"
         android:layout_marginEnd="70dp"
         android:gravity="center"
@@ -24,10 +24,10 @@
     <Button
         android:id="@+id/qr_scan_btn_id"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginTop="480dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginEnd="70dp"
+        android:layout_marginTop="500dp"
         android:text="@string/scan_qr"
         android:textSize="30sp"
         android:textColor="@color/dark_green"
@@ -35,22 +35,22 @@
     <Button
         android:id="@+id/qr_gen_btn_id"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginTop="580dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginEnd="70dp"
+        android:layout_marginTop="620dp"
         android:text="@string/gen_custom_qr"
         android:textSize="25sp"
         android:textColor="@color/dark_green"
-        android:background="@drawable/custom_text_box"/>/>
+        android:background="@drawable/custom_text_box"/>
 
     <Button
         android:id="@+id/img_choose_btn_id"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginTop="680dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginEnd="70dp"
+        android:layout_marginTop="740dp"
         android:text="@string/choose_img_qr"
         android:textSize="25sp"
         android:textColor="@color/dark_green"
@@ -63,6 +63,7 @@
         android:layout_marginTop="100dp"
         android:layout_centerHorizontal="true"
         android:contentDescription="TODO"
-        android:background="@mipmap/custom_launcher_foreground"/>
+        android:background="@drawable/custom_text_box"
+        android:src="@mipmap/custom_launcher_foreground" />
 
 </RelativeLayout>
