--- a/app/src/main/res/layout/activity_qrgen_link.xml
+++ b/app/src/main/res/layout/activity_qrgen_link.xml
@@ -15,39 +15,46 @@
         android:gravity="center"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
-        android:layout_marginTop="260dp"
+        android:layout_marginTop="340dp"
         android:inputType="text"
         android:textSize="25sp"
+        android:padding="20dp"
+        android:background="@drawable/custom_text_box"
         android:hint="@string/gen_link" />
 
     <ImageButton
         android:id="@+id/genLinkHomeBtn"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginStart="40dp"
         android:background="@drawable/green_custom_text_box"
         android:contentDescription="@string/home_button"
         tools:srcCompat="@drawable/baseline_home_24" />
 
-    <Button
+    <TextView
         android:id="@+id/qrLinkGenBtn"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_marginStart="100dp"
         android:layout_marginEnd="100dp"
-        android:layout_marginTop="560dp"
+        android:layout_marginTop="660dp"
         android:textSize="25sp"
-        android:text="@string/gen_qr" />
+        android:text="@string/gen_qr"
+        android:gravity="center"
+        android:textStyle="bold"
+        android:background="@drawable/custom_text_box"
+        android:textColor="@color/dark_green"/>
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="160dp"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
         android:textSize="30sp"
+        android:textStyle="bold"
         android:gravity="center"
         android:text="LINK QR" />
 </RelativeLayout>
