--- a/app/src/main/res/layout/activity_qrgen_sms.xml
+++ b/app/src/main/res/layout/activity_qrgen_sms.xml
@@ -11,32 +11,37 @@
         android:id="@+id/textView6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="160dp"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
         android:textSize="30sp"
         android:gravity="center"
+        android:textStyle="bold"
         android:text="SMS QR" />
 
     <ImageButton
         android:id="@+id/genSMSHomeBtn"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginStart="40dp"
         android:background="@drawable/green_custom_text_box"
         android:contentDescription="@string/home_button"
         tools:srcCompat="@drawable/baseline_home_24" />
 
-    <Button
+    <TextView
         android:id="@+id/qrSMSGenBtn"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_marginStart="100dp"
         android:layout_marginEnd="100dp"
-        android:layout_marginTop="540dp"
+        android:layout_marginTop="660dp"
         android:textSize="25sp"
-        android:text="@string/gen_qr" />
+        android:text="@string/gen_qr"
+        android:gravity="center"
+        android:textStyle="bold"
+        android:background="@drawable/custom_text_box"
+        android:textColor="@color/dark_green"/>
 
     <EditText
         android:id="@+id/qrPhoneSMS"
@@ -44,10 +49,12 @@
         android:layout_height="80dp"
         android:ems="10"
         android:inputType="phone"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="400dp"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
         android:textSize="25sp"
+        android:padding="20dp"
+        android:background="@drawable/custom_text_box"
         android:hint="@string/gen_mailto"/>
 
     <EditText
@@ -55,10 +62,12 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:ems="10"
-        android:layout_marginTop="400dp"
+        android:layout_marginTop="510dp"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
         android:inputType="text"
         android:textSize="25sp"
+        android:padding="20dp"
+        android:background="@drawable/custom_text_box"
         android:hint="@string/gen_body_sms" />
 </RelativeLayout>
