--- a/app/src/main/res/layout/activity_scan_qr.xml
+++ b/app/src/main/res/layout/activity_scan_qr.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools">
@@ -9,15 +9,15 @@
         android:id="@+id/zxing_barcode_scanner"
         android:layout_width="300dp"
         android:layout_height="300dp"
-        android:layout_marginStart="55dp"
-        android:layout_marginTop="100dp" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="350dp" />
 
     <ImageButton
         android:id="@+id/scanHomeBtn"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginStart="40dp"
         android:background="@drawable/green_custom_text_box"
         android:contentDescription="@string/home_button"
         tools:srcCompat="@drawable/baseline_home_24" />
@@ -27,8 +27,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="55dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="160dp"
         android:text="@string/scan_qr_text"
-        android:textColor="@android:color/white" />
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
-</FrameLayout>
+</RelativeLayout>
