--- a/app/src/main/res/layout/activity_qrgen.xml
+++ b/app/src/main/res/layout/activity_qrgen.xml
@@ -17,11 +17,11 @@
         android:id="@+id/genHomeBtn"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="60dp"
         android:layout_marginStart="40dp"
         android:background="@drawable/green_custom_text_box"
         android:contentDescription="@string/home_button"
-        tools:srcCompat="@drawable/baseline_home_24" />
+        android:src="@drawable/baseline_home_24" />
 
     <TextView
         android:id="@+id/textView2"
