--- a/app/src/main/res/layout/activity_qrgen_email.xml
+++ b/app/src/main/res/layout/activity_qrgen_email.xml
@@ -23,11 +23,11 @@
         android:id="@+id/genEmailHomeBtn"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="60dp"
         android:layout_marginStart="40dp"
         android:background="@drawable/green_custom_text_box"
         android:contentDescription="@string/home_button"
-        tools:srcCompat="@drawable/baseline_home_24" />
+        android:src="@drawable/baseline_home_24" />
 
     <TextView
         android:id="@+id/qrEmailGenBtn"
@@ -64,7 +64,7 @@
         android:layout_marginTop="400dp"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
-        android:inputType="text"
+        android:inputType="textEmailSubject"
         android:textSize="25sp"
         android:padding="20dp"
         android:background="@drawable/custom_text_box"
