--- a/app/src/main/res/layout/activity_qrgen_phone.xml
+++ b/app/src/main/res/layout/activity_qrgen_phone.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="40dp"
         android:background="@drawable/green_custom_text_box"
         android:contentDescription="@string/home_button"
-        tools:srcCompat="@drawable/baseline_home_24" />
+        android:src="@drawable/baseline_home_24" />
 
     <Spinner
         android:id="@+id/spinner"
