--- a/app/src/main/res/layout/activity_qrgen_phone.xml
+++ b/app/src/main/res/layout/activity_qrgen_phone.xml
@@ -21,7 +21,7 @@
         android:id="@+id/spinner"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_marginTop="400dp"
+        android:layout_marginTop="350dp"
         android:layout_marginStart="60dp"
         android:padding="20dp"
         android:spinnerMode="dropdown"
@@ -32,7 +32,7 @@
         android:id="@+id/qrPhone"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_marginTop="510dp"
+        android:layout_marginTop="460dp"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
         android:hint="@string/gen_phone"
@@ -45,16 +45,17 @@
         android:id="@+id/qrPhoneGenBtn"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:textSize="25sp"
         android:layout_marginStart="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="120dp"
         android:layout_marginEnd="60dp"
-        android:layout_marginTop="660dp"
-        android:gravity="center"
-        android:clickable="true"
-        android:textStyle="bold"
-        android:text="@string/gen_qr"
         android:background="@drawable/custom_text_box"
-        android:textColor="@color/dark_green"/>
+        android:clickable="true"
+        android:gravity="center"
+        android:text="@string/gen_qr"
+        android:textColor="@color/dark_green"
+        android:textSize="25sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView4"
