--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,8 @@
     <TextView
         android:id="@+id/info_txt_id"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_marginTop="400dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="335dp"
         android:layout_marginStart="70dp"
         android:layout_marginEnd="70dp"
         android:gravity="center"
@@ -24,43 +24,47 @@
     <Button
         android:id="@+id/qr_scan_btn_id"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="70dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="70dp"
         android:layout_marginEnd="70dp"
-        android:layout_marginTop="500dp"
+        android:layout_marginBottom="320dp"
+        android:background="@drawable/custom_text_box"
         android:text="@string/scan_qr"
-        android:textSize="30sp"
         android:textColor="@color/dark_green"
-        android:background="@drawable/custom_text_box"/>
+        android:textSize="30sp" />
+
     <Button
         android:id="@+id/qr_gen_btn_id"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="90dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="70dp"
         android:layout_marginEnd="70dp"
-        android:layout_marginTop="620dp"
+        android:layout_marginBottom="210dp"
+        android:background="@drawable/custom_text_box"
         android:text="@string/gen_custom_qr"
-        android:textSize="25sp"
         android:textColor="@color/dark_green"
-        android:background="@drawable/custom_text_box"/>
+        android:textSize="25sp" />
 
     <Button
         android:id="@+id/img_choose_btn_id"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="90dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="70dp"
         android:layout_marginEnd="70dp"
-        android:layout_marginTop="740dp"
+        android:layout_marginBottom="100dp"
+        android:background="@drawable/custom_text_box"
         android:text="@string/choose_img_qr"
-        android:textSize="25sp"
         android:textColor="@color/dark_green"
-        android:background="@drawable/custom_text_box"/>
+        android:textSize="25sp" />
 
     <ImageView
         android:id="@+id/introImg"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_marginTop="100dp"
+        android:layout_width="260dp"
+        android:layout_height="260dp"
+        android:layout_marginTop="70dp"
         android:layout_centerHorizontal="true"
         android:contentDescription="TODO"
         android:background="@drawable/custom_text_box"
