--- a/app/src/main/res/layout/activity_qrdetail.xml
+++ b/app/src/main/res/layout/activity_qrdetail.xml
@@ -11,35 +11,38 @@
     <ImageView
         android:id="@+id/qrImg"
         android:layout_width="match_parent"
-        android:layout_height="280dp"
-        android:layout_marginStart="55dp"
+        android:layout_height="240dp"
+        android:layout_marginStart="65dp"
         android:layout_marginTop="120dp"
-        android:layout_marginEnd="55dp"
+        android:layout_marginEnd="65dp"
         android:contentDescription="@string/your_qr_code" />
 
     <TextView
         android:id="@+id/qrIntro"
         android:layout_width="match_parent"
         android:layout_height="25dp"
+        android:layout_below="@+id/qrImg"
         android:layout_marginStart="55dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="55dp"
-        android:layout_marginTop="400dp"
-        android:textSize="20sp"
-        android:textStyle="italic"
+        android:gravity="center"
         android:text="@string/your_qr_code"
-        android:gravity="center" />
+        android:textSize="20sp"
+        android:textStyle="italic" />
 
     <TextView
         android:id="@+id/qrContent"
-        android:layout_height="120dp"
         android:layout_width="match_parent"
-        android:gravity="center"
-        android:hint="@string/your_qr_content"
-        android:layout_marginTop="470dp"
+        android:layout_height="120dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
-        android:padding="20dp"
-        android:background="@drawable/custom_text_box"/>
+        android:layout_marginBottom="270dp"
+        android:background="@drawable/custom_text_box"
+        android:gravity="center"
+        android:inputType="textMultiLine"
+        android:hint="@string/your_qr_content"
+        android:padding="20dp" />
 
     <ImageButton
         android:id="@+id/detailHomeBtn"
@@ -54,10 +57,11 @@
     <TextView
         android:id="@+id/interactBtn"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
+        android:layout_height="150dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="55dp"
-        android:layout_marginTop="650dp"
         android:layout_marginEnd="-210dp"
+        android:layout_marginBottom="100dp"
         android:layout_toStartOf="@+id/shareBtn"
         android:background="@drawable/custom_text_box"
         android:backgroundTint="@null"
@@ -69,10 +73,11 @@
     <TextView
         android:id="@+id/saveBtn"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="70dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="230dp"
-        android:layout_marginTop="650dp"
         android:layout_marginEnd="55dp"
+        android:layout_marginBottom="180dp"
         android:background="@drawable/custom_text_box"
         android:gravity="center"
         android:text="@string/save_button"
@@ -82,10 +87,11 @@
     <TextView
         android:id="@+id/shareBtn"
         android:layout_width="156dp"
-        android:layout_height="80dp"
+        android:layout_height="70dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="230dp"
-        android:layout_marginTop="750dp"
         android:layout_marginEnd="55dp"
+        android:layout_marginBottom="100dp"
         android:background="@drawable/custom_text_box"
         android:gravity="center"
         android:text="@string/share_button"
