--- a/app/src/main/res/layout/activity_qrgen_email.xml
+++ b/app/src/main/res/layout/activity_qrgen_email.xml
@@ -34,10 +34,11 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="670dp"
         android:layout_marginEnd="100dp"
-        android:gravity="center"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="120dp"
         android:background="@drawable/custom_text_box"
+        android:gravity="center"
         android:text="@string/gen_qr"
         android:textColor="@color/dark_green"
         android:textSize="25sp" />
@@ -48,7 +49,7 @@
         android:layout_height="80dp"
         android:ems="10"
         android:inputType="textEmailAddress"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="250dp"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
         android:textSize="25sp"
@@ -61,7 +62,7 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:ems="10"
-        android:layout_marginTop="400dp"
+        android:layout_marginTop="350dp"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
         android:inputType="textEmailSubject"
@@ -73,12 +74,12 @@
     <EditText
         android:id="@+id/qrBody"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="110dp"
         android:ems="10"
-        android:layout_marginTop="500dp"
+        android:layout_marginTop="450dp"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
-        android:inputType="text"
+        android:inputType="textMultiLine"
         android:textSize="25sp"
         android:padding="20dp"
         android:background="@drawable/custom_text_box"
