--- a/app/src/main/res/layout/activity_qrgen_link.xml
+++ b/app/src/main/res/layout/activity_qrgen_link.xml
@@ -15,8 +15,8 @@
         android:gravity="center"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
-        android:layout_marginTop="340dp"
-        android:inputType="text"
+        android:layout_marginTop="300dp"
+        android:inputType="textMultiLine"
         android:textSize="25sp"
         android:padding="20dp"
         android:background="@drawable/custom_text_box"
@@ -38,7 +38,8 @@
         android:layout_height="80dp"
         android:layout_marginStart="100dp"
         android:layout_marginEnd="100dp"
-        android:layout_marginTop="660dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="120dp"
         android:textSize="25sp"
         android:text="@string/gen_qr"
         android:gravity="center"
