--- a/app/src/main/res/layout/activity_qrgen_location.xml
+++ b/app/src/main/res/layout/activity_qrgen_location.xml
@@ -35,7 +35,8 @@
         android:layout_height="80dp"
         android:layout_marginStart="100dp"
         android:layout_marginEnd="100dp"
-        android:layout_marginTop="660dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="120dp"
         android:textSize="25sp"
         android:gravity="center"
         android:textStyle="bold"
@@ -49,7 +50,7 @@
         android:layout_height="80dp"
         android:ems="10"
         android:inputType="numberDecimal"
-        android:layout_marginTop="400dp"
+        android:layout_marginTop="350dp"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
         android:textSize="25sp"
@@ -62,7 +63,7 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:ems="10"
-        android:layout_marginTop="510dp"
+        android:layout_marginTop="460dp"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
         android:inputType="numberDecimal"
