--- a/app/src/main/res/layout/activity_qrgen_sms.xml
+++ b/app/src/main/res/layout/activity_qrgen_sms.xml
@@ -35,7 +35,8 @@
         android:layout_height="80dp"
         android:layout_marginStart="100dp"
         android:layout_marginEnd="100dp"
-        android:layout_marginTop="660dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="120dp"
         android:textSize="25sp"
         android:text="@string/gen_qr"
         android:gravity="center"
@@ -49,7 +50,7 @@
         android:layout_height="80dp"
         android:ems="10"
         android:inputType="phone"
-        android:layout_marginTop="400dp"
+        android:layout_marginTop="360dp"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
         android:textSize="25sp"
@@ -62,10 +63,10 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:ems="10"
-        android:layout_marginTop="510dp"
+        android:layout_marginTop="470dp"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
-        android:inputType="text"
+        android:inputType="textMultiLine"
         android:textSize="25sp"
         android:padding="20dp"
         android:background="@drawable/custom_text_box"
